--- a/css/album.css
+++ b/css/album.css
@@ -36,3 +36,13 @@ footer p {
 	text-align: center
 }
 
+.carousel-caption h1{
+	color: black;
+}
+
+.btn-danger{
+  background-color: #691c32;
+}
+
+
+
